syntax = "proto3";

package envoy.extensions.filters.http.golang.v3alpha;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "xds/annotations/v3/status.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.golang.v3alpha";
option java_outer_classname = "GolangProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/http/golang/v3alpha";
option (udpa.annotations.file_status).package_version_status = ACTIVE;
option (xds.annotations.v3.file_status).work_in_progress = true;

// [#protodoc-title: golang extension filter]
// golang extension filter.
//
// In the below example, we configured the go plugin 'auth' and 'limit' dynamic libraries into
// Envoy, which can avoid rebuilding Envoy.
//
// * Develop go-plugin
//
// We can implement the interface of :ref:`StreamFilter <contrib.go_plugin_api.plugin.StreamFilter>`
// API by the GO language to achieve the effects of Envoy native filter.
//
// The filter based on the `APIs implementation
// <https://github.com/mosn/envoy-go-filter-samples/blob/master/simple/filter.go>`_ for details.
//
// Then put the GO plugin source code into the ${OUTPUT}/src/ directory with the name of the plugin
// for GO plugin builds.
// The following examples implement limit and auth GO plugins.
//
// .. code-block:: bash
//
// $tree /home/admin/envoy/go-plugins/src/
// |--auth
// |   |--config.go
// |   |--filter.go
// ---limit
//     |--config.go
//     |--filter.go
//
// * Build go-plugin
//
// Build the Go plugin so by `go_plugin_generate.sh` script, below example the `liblimit.so` and
// `libauth.so` will be generated in the `/home/admin/envoy/go-plugins/` directory.
//
// .. code-block:: bash
//
//   #!/bin/bash
//   if [ $# != 2 ]; then
//      echo "need input the go plugin name"
//      exit 1
//   fi
//
//   PLUGINNAME=$1
//   OUTPUT=/home/admin/envoy/go-plugins/
//   PLUGINSRCDIR=${OUTPUT}/src/${PLUGINNAME}
//   go build --buildmode=c-shared  -v -o $OUTPUT/lib${PLUGINNAME}.so $PLUGINSRCDIR
//
// .. code-block:: bash
//
//   $go_plugin_generate.sh limit
//   $go_plugin_generate.sh auth
//
// * Configure go-plugin
//
// Use the http filter of :ref: `golang <envoy.filters.http.golang>` to specify
// :ref: `library` <envoy.filters.http.golang> in ingress and egress to enable the plugin.
//
// Example:
//
// .. code-block:: yaml
//
//   static_resources:
//     listeners:
//       - name: ingress
//         address:
//           socket_address:
//             protocol: TCP
//             address: 0.0.0.0
//             port_value: 8080
//         filter_chains:
//           - filters:
//               - name: envoy.filters.network.http_connection_manager
//               ......
//                   http_filters:
//                     - name: envoy.filters.http.golang
//                       typed_config:
//                         "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
//                         library: "/home/admin/envoy/go-plugins/liblimit.so"
//                         plugine_name: limit
//                         plugin_config:
//                           "@type": type.googleapis.com/envoy.extensions.filters.http.golang.plugins.limit.v3.Config
//                           xxx1: xx1
//                           xxx2: xx2
//                     - name: envoy.filters.http.header_to_metadata
//                     - name: envoy.filters.http.golang
//                       typed_config:
//                         "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
//                         library: "/home/admin/envoy/go-plugins/libauth.so"
//                         plugine_name: auth
//                         plugin_config:
//                           "@type": type.googleapis.com/envoy.extensions.filters.http.golang.plugins.auth.v3.Config
//                           xxx1: xx1
//                           xxx2: xx2
//                     - name: envoy.filters.http.router
//       - name: egress
//         address:
//           socket_address:
//             protocol: TCP
//             address: 0.0.0.0
//             port_value: 8081
//         filter_chains:
//           - filters:
//               - name: envoy.filters.network.http_connection_manager
//                   ......
//                   http_filters:
//                     - name: envoy.filters.http.golang
//                       typed_config:
//                         "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
//                         library: "/home/admin/envoy/go-plugins/libauth.so"
//                         plugine_name: auth
//                         plugin_config:
//                           "@type": type.googleapis.com/envoy.extensions.filters.http.golang.plugins.auth.v3.Config
//                           xxx1: xx1
//                           xxx2: xx2
//                     - name: envoy.filters.http.router
// [#not-implemented-hide:]
message Config {
  enum MergePolicy {
    MERGE_VIRTUALHOST_ROUTER_FILTER = 0;
    MERGE_VIRTUALHOST_ROUTER = 1;
    OVERRIDE = 3;
  }

  // Dynamic library implementing the interface of
  // :ref:`StreamFilter <contrib.go_plugin_api.plugin.StreamFilter>`.
  // [#comment:TODO(wangfakang): Support for downloading libraries from remote repositories.]
  string library = 1 [(validate.rules).string = {min_len: 1}];

  // plugin_name is the name of the go plugin, which needs to be consistent with the name
  // registered in StreamFilterFactoryManager::RegisterStreamFactory.
  string plugin_name = 2 [(validate.rules).string = {min_bytes: 1}];

  // plugin_config is the configuration of the go plugin, note that this configuration is
  // only parsed in the go plugin.
  google.protobuf.Any plugin_config = 3;

  // merge_policy is the merge policy configured by the go plugin.
  // go plugin configuration supports three dimensions: the virtual host’s typed_per_filter_config,
  // the route’s typed_per_filter_config or filter's config.
  // The meanings are as follows:
  // MERGE_VIRTUALHOST_ROUTER_FILTER: pass all configuration into go plugin.
  // MERGE_VIRTUALHOST_ROUTER: pass Virtual-Host and Router configuration into go plugin.
  // OVERRIDE: override according to Router > Virtual_host > Filter priority and pass the
  // configuration to the go plugin.
  MergePolicy merge_policy = 4 [(validate.rules).enum = {defined_only: true}];
}

// [#not-implemented-hide:]
message RouterPlugin {
  // The extension_plugin_options field is used to provide extension options for plugin.
  google.protobuf.Struct extension_plugin_options = 1;

  // The config field is used to setting plugin config.
  google.protobuf.Any config = 2;
}

// [#not-implemented-hide:]
message ConfigsPerRoute {
  // plugins_config is the configuration of the go plugin at the per-router, and
  // key is the name of the go plugin.
  // Example
  // typed_per_filter_config:
  //   golang:
  //     "@type": type.googleapis.com/golang.http.ConfigsPerRoute
  //     plugins_config:
  //       plugin1:
  //        extension_plugin_options:
  //          disabled: true
  //        config:
  //          "@type": type.googleapis.com/golang.http.plugin1
  //          xxx: xxx
  //       plugin2:
  //        config:
  //          "@type": type.googleapis.com/golang.http.plugin2
  //          xxx: xxx
  map<string, RouterPlugin> plugins_config = 1;
}
